AC-184 Resolved, added google marker in quotation modal. 15/11/2016 17:10

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
@@ -22,7 +22,8 @@
     width: 548px;
     height: 502px;
     float: left;
-    overflow: overlay;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 .quotation-modal .payment-info {
     padding: 20px;
