--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -199,10 +199,6 @@
                 <label for="quot_performance_time">Performance time</label>
                 <input type="text" class="form-control" id="quot_performance_time" placeholder="10 p.m." name="performance_time" <%=disabled%>>
             </div>
-            <%
-
-            console.log(data.model)
-             %>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 form-group">
                 <label for="quot_address">Address</label>
                 <input type="text" class="form-control" id="quot_address" placeholder="St Regis" name="address" value="<%=data.model.location%>" <%=disabled%>>
@@ -227,7 +223,8 @@
             </div>
 
             <div class="map-holder">
-                <img src="https://maps.googleapis.com/maps/api/staticmap?size=196x106&center=<%=data.model.location%>&key=AIzaSyATENIG0m2xaOqvzz7M9CbOHRFVexb4LWw">
+                <img src="https://maps.googleapis.com/maps/api/staticmap?center=<%=data.model.location%>&zoom=14&key={{googlemaps.key}}&size=196x106&markers=size:mid|color:blue|label:E%7C<%=data.model.location%>
+">
             </div>
         </div>
 
