--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -15,6 +15,8 @@
 @import "parts/how-it-works.css";
 @import "custom.css";
 
+@import "globals/buttons.css";
+
 @font-face {
     font-family: LatoBlack;
     src: url(../fonts/Lato/Lato-Black.ttf);
