View\download quotation from chatroom

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -60,8 +60,8 @@
                         <dl>
                             <dt>Quotation</dt>
                             <dd>
-                                <a href="#">See</a>
-                                <a href="#">Download</a>
+                                <a  target="_blank" href="{{ quotationLink }}">See</a>
+                                <a href="{{ quotationLink }}" download>Download</a>
                             </dd>
                         </dl>
                     </li>
