--- a/src/Acted/LegalDocsBundle/Resources/views/Email/quotation_reply_notify.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Email/quotation_reply_notify.html.twig
@@ -6,7 +6,7 @@
 {% block body_html %}
     {% autoescape false %}
         <p>Hello {{ client.firstname }},</p>
-        <p>This is, {{ artist.firstname }}. I have just sent you a quotation with regard to your event “{{ event.title }}”. You can open this quotation here or access it for your chatroom.</p>
+        <p>This is, {{ artist.firstname }}. I have just sent you a quotation with regard to your event “{{ event.title }}”. You can open this quotation <a href="{{ quotationLink }}">here</a> or access it for your chatroom.</p>
         <p>Please do not hesitate to contact me if you have any question.</p>
         <p>Kind regards,</p>
         <p>{{ artist.firstname }}</p>
