pre to p in the view

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -115,7 +115,7 @@
                                             </p>
                                         {% endif %}
                                         {% if chatMessage.message_text is defined %}
-                                            <pre>{{ chatMessage.message_text }}</pre>
+                                            <p>{{ chatMessage.message_text }}</p>
                                         {% endif %}
                                         <em class="date">{{ chatMessage.time_from_get }}</em>
                                     </div>
