event_name maxlength to 60 symbols

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -23,7 +23,7 @@
                     <div class="row clearfix">
                         <div class="col-lg-8 form-group">
                             <label for="event_name">Name your event</label>
-                            <input type="text" class="form-control" id="event_name" placeholder="Name your event" name="name">
+                            <input type="text" maxlength="60" class="form-control" id="event_name" placeholder="Name your event" name="name">
                         </div>
                     </div>
                     <div class="row">
