--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -152,7 +152,7 @@
             </div>
             <div class="col-2">
                 <form class="message-form" action="#">
-                    <textarea class="textarea" id="chat-room" placeholder="Write your message"></textarea>
+                    <textarea class="textarea" maxlength="512" id="chat-room" placeholder="Write your message"></textarea>
                     <div class="upload-box">
                         <div class="row">
                             <input type="file" name="files[]" id="filer_input1" class="chatFileUpload" multiple="multiple">
