--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/dashboardmenu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/dashboardmenu.html.twig
@@ -1,7 +1,7 @@
 <ul class="categories-menu">
-    <li class="menu-block"><a href="/dashboard/messages/{{ app.user.id }}">Messages</a></li>
-    <li class="menu-block"><a href="/dashboard/enquiries/{{ app.user.id }}">Enquiries</a></li>
-    <li class="menu-block"><a href="/dashboard/bookings/{{ app.user.id }}">Bookings</a></li>
+    <li class="menu-block"><a href="{{ path('all_messages_user') }}">Messages</a></li>
+    <li class="menu-block"><a href="{{ path('chat_room_list') }}">Enquiries</a></li>
+    <li class="menu-block"><a href="{{ path('bookings') }}">Bookings</a></li>
     <li class="menu-block"><a href="/dashboard/agenda">Agenda</a></li>
     <li class="menu-block"><a href="/dashboard/prices">Prices</a></li>
     <li class="menu-block"><a href="/dashboard/payment">Payment & Accounts</a></li>
