--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/team.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/team.css
@@ -39,7 +39,7 @@
 
 .team-item-description p { padding: 15px;
     margin: 0;
-    font-family: 'Lato', sans-serif;
+    font-family: LatoRegular;
     font-weight: 400;
     font-size: 16px;
     color: #000000;
@@ -61,7 +61,7 @@
     .team-item-description p {
         padding: 10px;
         margin: 0;
-        font-family: 'Lato', sans-serif;
+        font-family: LatoRegular;
         font-weight: 400;
         font-size: 14px;
         color: #000000;
@@ -74,7 +74,7 @@
     .team-item-description p {
         padding: 15px;
         margin: 0;
-        font-family: 'Lato', sans-serif;
+        font-family: LatoRegular;
         font-weight: 400;
         font-size: 14px;
         color: #000000;
