--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/dashboardmenu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/dashboardmenu.html.twig
@@ -14,9 +14,9 @@
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Enquiries
         <span class="caret"></span></button>
     <ul class="dropdown-menu">
-        <li class="menu-block"><a href="/dashboard/messages/{{ app.user.id }}" class="active">Messages</a></li>
-        <li class="menu-block"><a href="/dashboard/enquiries/{{ app.user.id }}">Enquiries</a></li>
-        <li class="menu-block"><a href="/dashboard/bookings/{{ app.user.id }}">Bookings</a></li>
+        <li class="menu-block"><a href="/dashboard/messages" class="active">Messages</a></li>
+        <li class="menu-block"><a href="/dashboard/enquiries">Enquiries</a></li>
+        <li class="menu-block"><a href="/dashboard/bookings">Bookings</a></li>
         <li class="menu-block"><a href="/dashboard/agenda">Agenda</a></li>
         <li class="menu-block"><a href="/dashboard/prices">Prices</a></li>
         <li class="menu-block"><a href="/dashboard/payment">Payment & Accounts</a></li>
