Update messages style. 22/11/2016 11:41 AM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/messages.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/messages.css
@@ -277,8 +277,8 @@
 }
 
 .messages .dialogs .dialog-rating-container {
-    height: 147px;
     background-color: rgba(255, 253, 226, 1);
+    padding-bottom: 19px;
 }
 .messages .dialogs .dialog-rating-container .rating {
     display: inline-block;
