Added changed html for feedback.

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_client.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_client.html.twig
@@ -83,10 +83,10 @@
                 </div>
 
                 <div class="comment-box clearfix">
-                    <p class="char-count">28/1000</p>
-                    <textarea>This girl made our celebrati</textarea>
-                    <button class="submit pull-right">Submit</button>
-                </div>
+                    <p class="char-count"><span class="current-count">28</span><span>/1000</span></p>
+                    <textarea>This girl made our celebrati</textarea>
+                    <button class="submit pull-right">Submit</button>
+                </div>
             </section>
             <section class="col-md-12">
                 <div>
