--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_client.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_client.html.twig
@@ -68,7 +68,7 @@
             <section class="col-md-12">
                 <div>
                     <div class="avatar">
-                        <img src="assets/images/avatar.jpg" alt=""/>
+                        <img src="/assets/images/avatar.jpg" alt=""/>
                     </div>
                     <div class="user-info">
                         <span class="user-name">Thomas Castagent</span>
@@ -91,7 +91,7 @@
             <section class="col-md-12">
                 <div>
                     <div class="avatar">
-                        <img src="assets/images/avatar.jpg" alt=""/>
+                        <img src="/assets/images/avatar.jpg" alt=""/>
                     </div>
                     <div class="user-info">
                         <span class="user-name">Thomas Castagent</span>
@@ -106,10 +106,10 @@
                 </div>
 
                 <div class="comment-box clearfix">
-                    <p class="char-count">0/1000</p>
-                    <textarea>This girl made our celebrati</textarea>
-                    <button class="submit pull-right">Submit</button>
-                </div>
+                    <p class="char-count"><span class="current-count">0</span><span>/1000</span></p>
+                    <textarea>This girl made our celebrati</textarea>
+                    <button class="submit pull-right">Submit</button>
+                </div>
             </section>
 
         </div>
