Update feedback layout for client. 24/11/2016 11:50 AM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/feedback.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/feedback.css
@@ -160,8 +160,24 @@ margin: 0 0 0 47px;**/
     border-radius: 3px;
     padding: 4px 13px 6px 13px;
     margin: 0 10px 0 0;
+
+    width: 111px;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.dashboard.client .events-menu .event-item a {
     font-family: LatoRegular;
     font-size: 14px;
+    color: rgba(0, 0, 0, 0.87);
+}
+.dashboard.client .events-menu .event-item a:hover {
+    text-decoration: none;
+    cursor: pointer;
+}
+.dashboard.client .events-menu .event-item.active a {
+    color: #FFF;
 }
 .dashboard.client .events-menu .event-item.non-active {
     background-image: -webkit-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -webkit-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
@@ -312,10 +328,12 @@ margin: 0 0 0 47px;**/
     .dashboard.client .comment-area {
         width: 720px;
     }
-
     .dashboard.client .options-menu .active-tab,
     .dashboard.client .options-menu input[name="options-menu-open"] {
         display: none;
+    }
+    .dashboard.client .events-menu {
+        width: 700px;
     }
 }
 
