--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_client.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_client.html.twig
@@ -4,19 +4,19 @@
         <div class="row events-menu">
             <ul>
                 <li class="event-item non-active">
-                    Event name 2
+                    <a title="Event name 2">Event name 2</a>
                 </li>
                 <li class="event-item active">
-                    AstraZeneca 2016 Annual Party
+                    <a title="AstraZeneca 2016 Annual Party">AstraZeneca 2016 Annual Party</a>
                 </li>
                 <li class="event-item non-active">
-                    Event name 3
+                    <a title="Event name 3">Event name 3</a>
                 </li>
                 <li class="event-item non-active">
-                    Event name 4
+                    <a title="Event name 4">Event name 4</a>
                 </li>
                 <li class="event-item non-active">
-                    Event name 5
+                    <a title="Event name 5">Event name 5</a>
                 </li>
             </ul>
 
