--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -74,7 +74,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 {% if app.user %}
                                     {% if app.user.artist %}
-                                        <li class="bookings"><a href="/dashboard/bookings">My bookings
+                                        <li class="bookings"><a href="{{ path('bookings') }}">My bookings
                                                 <div class="underline">
                                                     <div class="top"></div>
                                                     <div class="bottom"></div>
